# bit-intro-assignment

./: .gitignore  README.md  baseline-and-feature_importance.ipynb  baseline_and_feature_importance.ipynb  catboost_model.py  data_analysis_and_preprocessing.ipynb  feature_importance.ipynb  lgbm_model.py  main.py  model-catboost_traning.ipynb  model-lgbm_training.ipynb  model_training.ipynb  pyproject.toml  single-row-selector.ipynb  utils.py  v1_data_analysis_and_preprocessing.ipynb  v2_data_processing_pruning.ipynb
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
catboost_info/tmp/: cat_feature_index.f6fc2dab-e6cb2ae0-e7d1138a-4a212d44.tmp
