[project]
name = "bit-intro-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "ipython>=9.6.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "matplotlib-inline>=0.1.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.1.1",
]

[project.optional-dependencies]
dev = [
    "jupyterlab",
]
